fixed spacing and order

--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,19 @@
   float: left;
 }
 #main-navbar ul li {
-  display: block;
+  float: left;
   position: relative;
   right: 50%;
-  float: left;
+  display: block;
+}
+#main-navbar ul li a {
+  display: block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
 }
 #main-navbar ul li a:hover {
-  background-color: #0000;
-}
-main-navbar ul li a {
-  padding: 10px 20px;
-  text-decoration: none;
-  display: block;
-  color: #ffff
+  background-color: #000;
 }
 #onpage {
   text-decoration: underline overline;
